@@ -3,6 +3,7 @@ Version 1.4.3+svn:
    * updated translations: Danish, Finnish, German, Greek, Lithuanian, Serbian 
    * langcode change: moved gl_ES to gl
  * miscellaneous and bug fixes:
+   * Fixed timer end warning not to play in opponents turn (bug: #11517)
    * fix bug #11630 (preventing redo and rename during opponent's turn)
    * Added recursion preventarion to [kill] fire_event=yes [/kill]
 
